Update Open Graph and Twitter image URLs
Removed lovable image

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <meta property="og:title" content="Paramanu Consulting | Enterprise Oracle, Cloud & DevOps Managed Services" />
     <meta property="og:description" content="Tier-1 Enterprise IT Consulting delivering mission-critical Oracle and Cloud expertise at scale. 99.99% uptime SLA." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://www.paramanuconsulting.com/src/assets/paramanu-consulting-logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@ParamanuConsulting" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://www.paramanuconsulting.com/src/assets/paramanu-consulting-logo.png" />
   </head>
 
   <body>
